--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -9,10 +9,10 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://github.com/*/pull/*/files"],
+      "matches": ["https://github.com/*"],
       "js": ["content-script.js"],
       "css": ["style.css"],
-      "run_at": "document_end"
+      "run_at": "document_start"
     }
   ]
 }
